cmake_minimum_required(VERSION 3.7)
project(QT_TP2)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_AUTOMOC ON)
find_package(Qt5Widgets CONFIG REQUIRED)
add_executable(QT_TP2 main.cpp SQLClientWindow.cpp SQLClientWindow.h ButtonsPanel.cpp ButtonsPanel.h LabeledTextField.cpp LabeledTextField.h ConfigurationDialog.cpp ConfigurationDialog.h)
target_link_libraries(QT_TP2 Qt5::Widgets)